--- a/homework_1/index.html
+++ b/homework_1/index.html
@@ -4,17 +4,51 @@
     <meta charset="UTF-8">
     <title>HW1</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="custom_style.css">
     <script src="node_modules/bootstrap/dist/js/bootstrap.js" type="module"></script>
+
 </head>
 <body>
 
-<div class="container">
-    <div class="row row-cols-2">
-        <div class="col">Column</div>
-        <div class="col">Column</div>
-        <div class="col">Column</div>
-        <div class="col">Column</div>
-    </div>
+<div class="container wrapper">
+    <img class="img-thumbnail" id="profile-pic" src="linkedin_profile.png" alt="">
+</div>
+<div class="container wrapper" >
+    <h1>Nermin Dedovic</h1>
+</div>
+
+<div class="container wrapper">
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th scope="col">Question</th>
+            <th scope="col">Answer</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <th scope="row">Undergrad</th>
+            <td>Studied CS @ DePaul, graduated in 2021</td>
+        </tr>
+        <tr>
+            <th scope="row">Current Focus</th>
+            <td>SE</td>
+        </tr>
+        <tr>
+            <th scope="row">Web Dev Experience</th>
+            <td>I have experience in HTML, CSS, JS, Bootstrap and Node. Mostly from undergrad / capstone project - ie. I am rusty.</td>
+        </tr>
+        <tr>
+            <th scope="row">Most interested in learning (scoped to WebApps)</th>
+            <td>Learning React. Lightweight SPAs. Creating common libraries / reusable components to be integrated with RESTful backends.</td>
+        </tr>
+        <tr>
+            <th scope="row">Occupation</th>
+            <td>CE at Confluent</td>
+        </tr>
+
+        </tbody>
+    </table>
 </div>
 
 </body>
